# swiper

./: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 3cb52a6846bf_.py  550aab7c677f_.py  830f4bb9900d_auth_database.py  a9a0754089ee_.py  b2bd5c68d924_.py  c3b86b95adb2_.py  e5565ef40453_.py
src/: config.py  dao.py  database.py  interfaces.py  main.py  unitofwork.py
src/auth/: config.py  database.py  email_service.py  exceptions.py  models.py  router.py  routers.py  scheme.py  schemes.py  service.py  services.py  utils.py
src/user_profile/: database.py  models.py  routers.py  schemes.py  services.py
